# neura

./: README.md  package-lock.json  package.json
R&D/: create_handset_data.py  create_training_data.py  data_creator.py  gesture-recogniser  gesture-recogniser.pkl  gesture-recognition.py  gesture-test.py  gesture_training.py  media_pipe_handtrack.py  neural.pkl  palm_cascade.py  palm_mask.py  single_dot.py
R&D/TestData/: fingertip_v1.xml
buddy/: pyproject.toml
buddy/buddy/: data_creator.py  interactive_runner.py  main.py  trainer.py
buddy/tests/: test_buddy.py
data/: gesture_training.csv
neura-app/: app.js  index.html  neutralino.config.json
neura-app/GestureRecognition/: gestureRecogniser.js
src/renderer/: App.tsx
