[tool.poetry]
name = "buddy"
version = "0.1.0"
description = ""
authors = ["dillondesilva <dillon.desilva@geeksdiary.com>"]

[tool.poetry.scripts]
buddy = "buddy.main:main"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
mediapipe = "^0.8.9"
pandas = "^1.3.5"
shortuuid = "^1.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
